src/objects/Student_Attribute__c.object
<CustomObject>
    <description>Represents Student Characteristics AND Student Indicators as deemed by EdFi</description>
    <fields>
        <fullName>Designating_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organization or program account that is specifying this designation</description>
        <label>Designating Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Student Attributes</relationshipLabel>
        <relationshipName>Student_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Designating_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person, if applicable, indicating this designation</description>
        <label>Designating Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Attributes</relationshipLabel>
        <relationshipName>Student_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date in which this characteristic or indicator ceases to apply</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date in which this characteristic or indicator begins to apply</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Student Attribute</label>
    <nameField>
        <label>Student Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>